closed #7 (removed option to set club division to none)

--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
 <li><b>Nation 1 ID & Nation 2 ID:</b> An ID of -127 means that the chosen nation does not exist and this should be corrected in the spreadsheet. A -126 means that the cell is blank (this is not an error - it just means that the existing Nation ID value in the database will not be modified). A -1 simply means no nation selected (this is not an error) and any other number refers to the nation's Nation ID in the database;</li>
 <li><b>Club ID & Loan Club ID:</b> An ID of -127 means that the chosen club does not exist and this should be corrected in the spreadsheet. A -126 means that the cell is blank (this is not an error - it just means that the existing Club ID value in the database will not be modified). A -1 simply means no club selected (i.e. free agent - this is not an error) and any other number refers to the club's Club ID in the database;</li>
 <li><b>Protected:</b> 1 = the player is protected and 0 = the player is not protected; and</li>
-<li><b>Last Division ID & Division ID & Reserve Division ID:</b> An ID of -127 means that the chosen competition does not exist and this should be corrected in the spreadsheet. A -126 means that the cell is blank (this is not an error - it just means that the existing Division ID value in the database will not be modified). A -1 simply means no competition selected (i.e. remove competition from club - this is not an error) and any other number refers to the competition's Competition ID in the database.</li>
+<li><b>Last Division ID & Division ID & Reserve Division ID:</b> An ID of -127 means that the chosen competition does not exist and this should be corrected in the spreadsheet. A -126 means that the cell is blank (this is not an error - it just means that the existing Division ID value in the database will not be modified). Any other number refers to the division's Division ID in the database.</li>
 <li><b>Out of Range:</b>This column appears only for clubs import. An error message means there is some value in the row that is out of the supported range of values and it must be corrected in the spreadsheet.</li></ul></li>
 <li>If you decide that the spreadsheet is fine and there are no errors then proceed with <b>Step 4</b> below.</li>
 <li>If there errors that you need to correct then do the following:
@@ -42,7 +42,7 @@
 <h3>Transfer Value, Wage and World Reputation</h3>
 <p>Note that the Tool will automatically set a player's Wage and World Reputation based upon the Transfer Value entered into the spreadsheet (see the <b>Transfer Value</b> column). If you do not want this to happen then do not enter any Value.</p>
 <h3>Last Division, Division and Reserve Division</h3>
-<p>If you are importing club sheet, the Last Division, Division and Reserve Division fields should contain the long names of the desired competitions, or the string _none to set that club's division value to none, or an empty string to don't make any changes to that club's current division value</p>
+<p>If you are importing club sheet, the Last Division, Division and Reserve Division fields should contain the long names of the desired competitions, or an empty string to don't make any changes to that club's current division value. Setting a division value of a club to _none (no division) isn't supported.</p>
 
 <h1>Settings</h1>
 <h3>Row Buffer</h3>
